# PolyTranslate

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
app/: __init__.py  cli.py
app/config/: __init__.py  languages.py  schema.py  settings.py
app/core/: __init__.py  batch_translator.py  exporter.py  file_processor.py  language_detector.py  plugin_loader.py  renpy_context.py  renpy_processor.py  subtitle_processor.py  translator.py
app/gui/: __init__.py  comparison_view.py  glossary_view.py  history_view.py  main_window.py  settings_dialog.py
app/gui/tabs/: __init__.py  comparison_tab.py  diff_tab.py  evaluation_tab.py  glossary_tab.py  history_tab.py  results_tab.py
app/gui/widgets/: __init__.py  diff_view.py  file_drop.py  progress.py
app/gui/workflows/: __init__.py  batch_workflow.py  evaluation_workflow.py  translation_workflow.py
app/services/: __init__.py  agent_voting.py  ai_evaluator.py  base.py  chatgpt_proxy.py  claude.py  deepl.py  google.py  groq_service.py  llm_base.py  localai.py  openai_service.py  openrouter.py  yandex.py
app/utils/: __init__.py  cache.py  glossary.py  json_helpers.py  logging.py  rate_limiter.py
examples/plugin/: echo_service.py  pyproject.toml
examples/plugin-llm/: mistral_service.py  pyproject.toml
tests/: __init__.py  conftest.py  test_agent_voting.py  test_ai_evaluator.py  test_batch_extended.py  test_batch_translator.py  test_cache.py  test_cache_tmx.py  test_cli.py  test_cli_extended.py  test_diff_view.py  test_exporter.py  test_file_processor.py  test_file_processor_formats.py  test_file_processor_renpy_scenes.py  test_glossary.py  test_integration.py  test_json_helpers.py  test_language_detector.py  test_languages.py  test_llm_base.py  test_logging.py  test_plugin_loader.py  test_rate_limiter.py  test_renpy_context.py  test_renpy_processor.py  test_settings.py  test_subtitle_processor.py  test_translator.py  test_translator_extended.py
tests/fixtures/: sample.rpy  sample.txt
tests/services/: __init__.py  test_chatgpt_proxy.py  test_claude.py  test_deepl.py  test_google.py  test_groq.py  test_localai.py  test_openai.py  test_openrouter.py  test_yandex.py
