[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "polytranslate-echo"
version = "0.1.0"
description = "Example PolyTranslate plugin — echoes input text with a language tag (for development/testing)"
requires-python = ">=3.10"
dependencies = []

[project.entry-points."polytranslate.services"]
echo = "echo_service:EchoTranslationService"
